--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,25 +1,64 @@
-app:
-  auth-timeout: 5 # Время, дающееся пользователю на аутентификацию (в минутах)
-  base-path: "/openid-connect" # Базовый путь для всех запросов (https://<url>/api/v<version>/<base-path>/...)
+service:
+  auth-timeout: 5m # Время, дающееся пользователю на аутентификацию (в минутах)
+  base-path: /iam # Базовый путь для всех запросов (https://<url>/api/v<version>/<base-path>/...)
   port: 8800
   grpc-port: 8801
   metrics-port: 8802
-  allowed-redirect: "https://dnk33.com/"
+  allowed-redirect: https://dnk33.com/ # Базовый URL, на который можно редиректить после авторизации (будет приниматься <allowed-redirect>/*)
+  log-level: debug
+  log-add-source: true
+  metrics-endpoint: /metrics
 
 postgres:
-  address: 192.168.16.4
+  address: gobddocker-postgres-1
   port: 5432
   database: keycloak
-  user: kc_user_selector
+  user: kopilka
+  conn-timeout: 10s # Таймаут на установку соединения
+  max-conns: 20 # Максимальное количество соединений
+  min-conns: 5  # Минимальное количество соединений
+  max-conn-lifetime: 1h # Максимальное время жизни соединения
+  max-conn-idle-time: 30m # Максимальное время бездействия
+  healthcheck-period: 1m # Период проверки состояния соединения
+  request-timeout: 30s # Таймаут на выполнение запроса
 
 redis:
-  address: 192.168.16.3
+  address: gobddocker-redis-1
   port: 6379
 
 realm:
-  base-url: http://localhost:8080/auth # URL реалма keycloak
-  client-id: admin-cli # ID клиента в keycloak
-  client-sercret: zizipabeda # Secret клиента в keycloak
-  redirect-url: http://localhost:8080/callback # URL для редиректа после авторизации
-  te-timeout: 10 # Таймаут ожидания ответа от POST-запроса на /token (секунды)
+  base-url: http://127.0.0.1:8080/realms/noted/protocol/openid-connect/ # URL реалма keycloak
+  client-id: noted-webpage # ID клиента в keycloak
+  redirect-url: http://127.0.0.1:8800/token # URL для редиректа после авторизации
+  te-timeout: 10s # Таймаут ожидания ответа от POST-запроса на /token (секунды)
   state-length: 32 # Длина параметра state (байты)
+  id: a2771237-6233-41ef-a997-840a2eecc7ab
+  post-logout-redirect-uri: https://dnk33.com/
+  auth-endpoint: /auth
+  token-endpoint: /token
+  logout-endpoint: /logout
+
+http-client:
+  dial-timeout: 5s # Таймаут на установку соединения (секунды)
+  request-timeout: 30s # Таймаут на весь запрос
+  keep-alive: 30s # Время жизни соединения
+  max-idle-conns: 100 # Максимальное количество неактивных соединений
+  idle-conn-timeout: 90s # Время, в течение которого соединение считается неактивным
+  retries:
+    max-attempts: 3 # Максимальное количество попыток повтора запроса
+    base-delay: 200ms # Минимальная задержка между попытками (миллисекунды)
+    max-delay: 3s # Максимальная задержка между попытками (миллисекунды)
+    on-status: [429, 502, 503, 504] # Коды статусов, при которых повторяется запрос
+
+http-server: 
+  read-timeout: 5s # Таймаут на чтение запроса
+  write-timeout: 10s # Таймаут на запись ответа
+  idle-timeout: 30s # Таймаут на ожидание проставающего соединения
+  max-idle-worker-duration: 10s # Таймаут для горутин-воркеров
+  max-req-body-size: 4*1024*1024 # Максимальный размер тела запроса (байты)
+  read-buffer-size: 4096 # Размер буфера чтения (байты)
+  write-buffer-size: 4096 # Размер буфера записи (байты)
+  concurrency: 256*1024 # Максимальное количество одновременных соединений
+  max-conns-per-ip: 100 # Максимальное количество соединений на IP
+  max-requests-per-conn: 1000 # Максимальное количество запросов на соединение
+  tcp-keepalive-period: 3m # Период проверки TCP-подключения
