Added defaults for configs

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -56,8 +56,8 @@ http-server:
   idle-timeout: 30s # Таймаут на ожидание проставающего соединения
   max-idle-worker-duration: 10s # Таймаут для горутин-воркеров
   max-req-body-size: 4*1024*1024 # Максимальный размер тела запроса (байты)
-  read-buffer-size: 4096 # Размер буфера чтения (байты)
-  write-buffer-size: 4096 # Размер буфера записи (байты)
+  read-buffer-size: 4*1024 # Размер буфера чтения (байты)
+  write-buffer-size: 4*1024 # Размер буфера записи (байты)
   concurrency: 256*1024 # Максимальное количество одновременных соединений
   max-conns-per-ip: 100 # Максимальное количество соединений на IP
   max-requests-per-conn: 1000 # Максимальное количество запросов на соединение
